<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/details_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height100"
            android:text="@string/app_wizardHouseHeader"
            android:textAlignment="center"
            android:paddingTop="@dimen/padding30"
            android:textSize="@dimen/bigFontSize"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/details_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height300"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_DummyText"
            android:layout_marginHorizontal="@dimen/margin10"
            app:layout_constraintTop_toBottomOf="@+id/details_header"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/margin20"
            android:layout_marginVertical="@dimen/margin10"
            app:layout_constraintTop_toBottomOf="@+id/details_image"
            >

            <LinearLayout
                android:id="@+id/row_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/details_image"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medSmallFontSize"
                    android:textColor="@color/white"
                    android:text="@string/app_wizardName"/>
                <TextView
                    android:id="@+id/wizardName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin10"
                    android:textSize="@dimen/medSmallFontSize"
                    android:text="@string/app_wizardName"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin10"
                app:layout_constraintTop_toBottomOf="@+id/row_one"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medSmallFontSize"
                    android:textColor="@color/white"
                    android:text="@string/app_wizardActor"/>
                <TextView
                    android:id="@+id/actorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin10"
                    android:textSize="@dimen/medSmallFontSize"
                    android:text="@string/app_wizardActor"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin10"
                app:layout_constraintTop_toBottomOf="@+id/row_two"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medSmallFontSize"
                    android:textColor="@color/white"
                    android:text="@string/app_wizardHouse"/>
                <TextView
                    android:id="@+id/wizardHouse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin10"
                    android:textSize="@dimen/medSmallFontSize"
                    android:text="@string/app_wizardHouse"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin10"
                app:layout_constraintTop_toBottomOf="@+id/row_three"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medSmallFontSize"
                    android:textColor="@color/white"
                    android:text="@string/app_wizardAncestry"/>
                <TextView
                    android:id="@+id/wizardAncestry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin10"
                    android:textSize="@dimen/medSmallFontSize"
                    android:text="@string/app_wizardAncestry"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin10"
                app:layout_constraintTop_toBottomOf="@+id/row_four"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medSmallFontSize"
                    android:textColor="@color/white"
                    android:text="@string/app_wizardWand"/>
                <TextView
                    android:id="@+id/wizardWand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin10"
                    android:textSize="@dimen/medSmallFontSize"
                    android:text="@string/app_wizardWand"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin10"
                app:layout_constraintTop_toBottomOf="@+id/row_five"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medSmallFontSize"
                    android:textColor="@color/white"
                    android:text="@string/app_wizardPatronus"/>
                <TextView
                    android:id="@+id/wizardPatronus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin10"
                    android:textSize="@dimen/medSmallFontSize"
                    android:text="@string/app_wizardPatronus"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_seven"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height50"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin10"
                app:layout_constraintTop_toBottomOf="@+id/row_six"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medSmallFontSize"
                    android:textColor="@color/white"
                    android:text="@string/app_wizardSpecies"/>
                <TextView
                    android:id="@+id/wizardSpecies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin10"
                    android:textSize="@dimen/medSmallFontSize"
                    android:text="@string/app_wizardSpecies"/>
            </LinearLayout>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>